--- a/64 Dawn Parade/64 Dawn Parade.html
+++ b/64 Dawn Parade/64 Dawn Parade.html
@@ -26,8 +26,8 @@
 	<header class="site-header">
 		<div class="header-inner">
 					<div class="brand" style="display:flex;align-items:center;gap:14px;">
-							<img src="../Assets/85 Mountain view/fygfghf.png" alt="Teton Icon" class="brand-icon" style="height:38px;width:auto;display:inline-block;vertical-align:middle;">
-						</div>
+						<img src="../Assets/fygfghf.png" alt="Teton Construction" class="brand-icon" style="height:38px;width:auto;display:inline-block;vertical-align:middle;">
+					</div>
 
 				<button class="menu-toggle" aria-label="Open menu" aria-expanded="false" aria-controls="mobileDrawer"><span></span><span></span></button>
 
