--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
     </nav>
   </aside>
   <div class="content">
-  <img class="hero-logo" src="Assets/85 Mountain View/41a16fbe-dac6-4d23-b6ea-e9cb99b32397_removalai_preview.png" alt="Teton Construction Logo" />
+    <div class="hero-brand">
+      <img class="hero-icon" src="Assets/fygfghf.png" alt="Teton Construction Icon" />
+      <img class="hero-logo" src="Assets/85 Mountain View/41a16fbe-dac6-4d23-b6ea-e9cb99b32397_removalai_preview.png" alt="Teton Construction Logo" />
+    </div>
     <nav class="main-links">
       <a href="Projects/Projects.html" title="View our projects">Projects</a>
       <a href="Contact/Contact.html" title="Get in touch">Contact</a>
