--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -27,7 +27,7 @@
         <div>
             <a href="../The Violet/The Violet.html" style="display:block;">
                 <div class="project-card">
-                    <img src="../Assets/The Violet/Architect-renders-3.jpg" alt="The Violet">
+                    <img src="../Assets/The Violet/ij0rtgarliz0srxjf68w.webp" alt="The Violet">
                 </div>
             </a>
             <div class="card-label">
