--- a/The Violet/The Violet.html
+++ b/The Violet/The Violet.html
@@ -45,13 +45,13 @@
       <!-- Left: Project images -->
       <section class="project-media">
         <div class="frame top-shift">
-          <img src="../Assets/85 Mountain View/The Violet/Architect-renders-1.jpg" alt="The Violet – Render 1">
+          <img src="../Assets/The Violet/ij0rtgarliz0srxjf68w.webp" alt="The Violet – Exterior Angle 1" loading="lazy" decoding="async">
         </div>
         <div class="frame">
-          <img src="../Assets/85 Mountain View/The Violet/Architect-renders-3.jpg" alt="The Violet – Render 2">
+          <img src="../Assets/The Violet/izyosmidostwzivhojw5.webp" alt="The Violet – Exterior Angle 2" loading="lazy" decoding="async">
         </div>
         <div class="frame">
-          <img src="../Assets/85 Mountain View/The Violet/www.jpg" alt="The Violet – Render 3">
+          <img src="../Assets/The Violet/syxybpulzpa9jz2qmp53.webp" alt="The Violet – Exterior Angle 3" loading="lazy" decoding="async">
         </div>
       </section>
 
