--- a/85 Mountain View/85 Mountain View.html
+++ b/85 Mountain View/85 Mountain View.html
@@ -45,22 +45,22 @@
       <!-- Left: Project images -->
       <section class="project-media">
         <div class="frame">
-          <img src="../Assets/85 Mountain View/85 Mountain View/Untitled-1-01.png" alt="85 Mountain View – Render 1">
+          <img src="../Assets/85 Mountain View/kl7ve6tx9cnbqlcqotva.webp" alt="85 Mountain View – Render 1" loading="lazy" decoding="async">
         </div>
         <div class="frame">
-          <img src="../Assets/85 Mountain View/85 Mountain View/Untitled-1-02.png" alt="85 Mountain View – Render 2">
+          <img src="../Assets/85 Mountain View/pud7en76s2n69lc156vb.webp" alt="85 Mountain View – Render 2" loading="lazy" decoding="async">
         </div>
         <div class="frame">
-          <img src="../Assets/85 Mountain View/85 Mountain View/Untitled-1-03.png" alt="85 Mountain View – Render 3">
+          <img src="../Assets/85 Mountain View/eojki3g9gf4ojvyagf7f.webp" alt="85 Mountain View – Render 3" loading="lazy" decoding="async">
         </div>
         <div class="frame">
-          <img src="../Assets/85 Mountain View/85 Mountain View/Untitled-1-04.png" alt="85 Mountain View – Render 4">
+          <img src="../Assets/85 Mountain View/hbj2qvbwaz551qcowmh6.webp" alt="85 Mountain View – Render 4" loading="lazy" decoding="async">
         </div>
         <div class="frame">
-          <img src="../Assets/85 Mountain View/85 Mountain View/Untitled-1-05.png" alt="85 Mountain View – Render 5">
+          <img src="../Assets/85 Mountain View/d1slplwnlyzzynjdsbi6.webp" alt="85 Mountain View – Render 5" loading="lazy" decoding="async">
         </div>
         <div class="frame">
-          <img src="../Assets/85 Mountain View/85 Mountain View/Untitled-1-06.png" alt="85 Mountain View – Render 6">
+          <img src="../Assets/85 Mountain View/b1954dwgzect6qrxwa72.webp" alt="85 Mountain View – Render 6" loading="lazy" decoding="async">
         </div>
       </section>
 
