--- a/64 Dawn Parade/64 Dawn Parade.html
+++ b/64 Dawn Parade/64 Dawn Parade.html
@@ -45,13 +45,13 @@
 			<!-- Left: Project images -->
 			<section class="project-media">
 				<div class="frame">
-					<img src="assets/Impact-Design-Concept-Drawings-2-min.jpg" alt="64 Dawn Parade – Concept 1">
+					<img src="assets/hb7qryl3xsh50hfojf5m.webp" alt="64 Dawn Parade – Concept 1" loading="lazy" decoding="async">
 				</div>
 				<div class="frame">
-					<img src="assets/Impact-Design-Concept-Drawings-3-min.jpg" alt="64 Dawn Parade – Concept 2">
+					<img src="assets/t0kop73txof4gstglqou.webp" alt="64 Dawn Parade – Concept 2" loading="lazy" decoding="async">
 				</div>
 				<div class="frame">
-					<img src="assets/Impact-Design-Concept-Drawings-33333-min.jpg" alt="64 Dawn Parade – Concept 3">
+					<img src="assets/vhsbngwgw5ucjgpikz2w.webp" alt="64 Dawn Parade – Concept 3" loading="lazy" decoding="async">
 				</div>
 			</section>
 
@@ -69,7 +69,7 @@
 		</div>
 
 		<footer class="site-footer custom-footer">
-			<img src="../Assets/85 Mountain view/TetonConstruction_Assets-2.png" alt="Teton Logo" class="footer-left-logo">
+			<img src="../Assets/TetonConstruction_Assets-2.png" alt="Teton Logo" class="footer-left-logo">
 			<nav class="footer-nav">
 				<ul>
 					<li><a href="../index.html">Home</a></li>
@@ -77,7 +77,7 @@
 					<li><a href="../Contact/Contact.html">Contact</a></li>
 				</ul>
 			</nav>
-			<img src="../Assets/85 Mountain view/fygfghf.png" alt="Footer Logo" class="footer-right-icon">
+			<img src="../Assets/fygfghf.png" alt="Footer Logo" class="footer-right-icon">
 		</footer>
 	</main>
 	<script>
