--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -38,7 +38,7 @@
         <div>
             <a href="../85 Mountain View/85 Mountain View.html" style="display:block;">
                 <div class="project-card">
-                    <img src="../Assets/85 Mountain View/85 Mountain View/Untitled-1-03.png" alt="85 Mountain View">
+                    <img src="../Assets/85 Mountain View/eojki3g9gf4ojvyagf7f.webp" alt="85 Mountain View" loading="lazy" decoding="async">
                 </div>
             </a>
             <div class="card-label">
@@ -49,7 +49,7 @@
         <div>
             <a href="../64 Dawn Parade/64 Dawn Parade.html" style="display:block;">
                 <div class="project-card">
-                    <img src="../64 Dawn Parade/assets/Impact-Design-Concept-Drawings-33333-min.jpg" alt="64 Dawn Parade">
+                    <img src="../64 Dawn Parade/assets/hb7qryl3xsh50hfojf5m.webp" alt="64 Dawn Parade" loading="lazy" decoding="async">
                 </div>
             </a>
             <div class="card-label">
@@ -59,7 +59,7 @@
         </div>
         <div>
             <div class="project-card">
-                <img src="../Assets/85 Mountain View/16.jpg" alt="Unannounced Project 2" style="filter: grayscale(1) brightness(0.45);">
+                <img src="../Assets/16.jpg" alt="Unannounced Project" style="filter: grayscale(1) brightness(0.45);">
             </div>
             <div class="card-label">
                 Unannounced Project
@@ -69,7 +69,7 @@
     </main>
 
     <footer class="site-footer custom-footer">
-    <img src="../Assets/85 Mountain View/TetonConstruction_Assets-2.png" alt="Teton Logo" class="footer-left-logo">
+    <img src="../Assets/TetonConstruction_Assets-2.png" alt="Teton Logo" class="footer-left-logo">
         <nav class="footer-nav">
             <ul>
                 <li><a href="../index.html">Home</a></li>
@@ -77,7 +77,7 @@
                 <li><a href="../Contact/Contact.html">Contact</a></li>
             </ul>
         </nav>
-    <img src="../Assets/85 Mountain View/fygfghf.png" alt="Footer Logo" class="footer-right-icon">
+    <img src="../Assets/fygfghf.png" alt="Footer Logo" class="footer-right-icon">
     </footer>
 
     <script>
