--- a/85 Mountain View/85 Mountain View.html
+++ b/85 Mountain View/85 Mountain View.html
@@ -25,8 +25,8 @@
   <!-- Header -->
   <header class="site-header">
     <div class="header-inner">
-      <div class="brand" style="display:flex;align-items:center;gap:14px;">
-  <img src="../Assets/85 Mountain View/fygfghf.png" alt="Teton Icon" class="brand-icon" style="height:38px;width:auto;display:inline-block;vertical-align:middle;">
+    <div class="brand" style="display:flex;align-items:center;gap:14px;">
+  <img src="../Assets/fygfghf.png" alt="Teton Icon" class="brand-icon" style="height:38px;width:auto;display:inline-block;vertical-align:middle;">
       </div>
 
       <button class="menu-toggle" aria-label="Open menu" aria-expanded="false" aria-controls="mobileDrawer"><span></span><span></span></button>
@@ -78,7 +78,7 @@
     </div>
 
     <footer class="site-footer custom-footer">
-  <img src="../Assets/85 Mountain View/TetonConstruction_Assets-2.png" alt="Teton Logo" class="footer-left-logo">
+  <img src="../Assets/TetonConstruction_Assets-2.png" alt="Teton Logo" class="footer-left-logo">
       <nav class="footer-nav">
         <ul>
           <li><a href="../index.html">Home</a></li>
@@ -86,7 +86,7 @@
           <li><a href="../Contact/Contact.html">Contact</a></li>
         </ul>
       </nav>
-  <img src="../Assets/85 Mountain View/fygfghf.png" alt="Footer Logo" class="footer-right-icon">
+  <img src="../Assets/fygfghf.png" alt="Footer Logo" class="footer-right-icon">
     </footer>
   </main>
   <script>
