--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
   <div id="preloader">
-  <img src="Assets/85 Mountain View/teton-gif.gif" alt="Loading..." style="width:96px;height:auto;display:block;" />
+  <img src="Assets/teton-gif.gif" alt="Loading..." style="width:96px;height:auto;display:block;" />
   </div>
   <video class="video-bg" id="bgVideo" muted autoplay loop playsinline webkit-playsinline preload="auto" poster="Assets/85 Mountain View/16.jpg">
-    <source src="Assets/85 Mountain View/7031309_Close_up_Slow_Motion_3840x2160.mp4" type="video/mp4" />
+    <source src="Assets/7031309_Close_up_Slow_Motion_3840x2160.mp4" type="video/mp4" />
     Your browser does not support the video tag.
   </video>
   <img class="video-fallback" src="Assets/video-fallback.jpg" alt="Background" style="display:none;" />
@@ -34,7 +34,7 @@
   </aside>
   <div class="content">
     <div class="hero-brand">
-      <img class="hero-logo" src="Assets/85 Mountain View/41a16fbe-dac6-4d23-b6ea-e9cb99b32397_removalai_preview.png" alt="Teton Construction Logo" />
+  <img class="hero-logo" src="Assets/41a16fbe-dac6-4d23-b6ea-e9cb99b32397_removalai_preview.png" alt="Teton Construction Logo" />
     </div>
     <nav class="main-links">
       <a href="Projects/Projects.html" title="View our projects">Projects</a>
