--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <img src="Assets/teton-gif.gif" alt="Loading..." style="width:96px;height:auto;display:block;" />
   </div>
   <video class="video-bg" id="bgVideo" muted autoplay loop playsinline webkit-playsinline preload="auto" poster="Assets/85 Mountain View/16.jpg">
-    <source src="Assets/7031309_Close_up_Slow_Motion_3840x2160.mp4" type="video/mp4" />
+  <source src="Assets/7031309_Close_up_Slow_Motion_3840x2160 (1).mp4" type="video/mp4" />
     Your browser does not support the video tag.
   </video>
   <img class="video-fallback" src="Assets/video-fallback.jpg" alt="Background" style="display:none;" />
