--- a/index.html
+++ b/index.html
@@ -33,13 +33,15 @@
     </nav>
   </aside>
   <div class="content">
-    <div class="hero-brand">
-  <img class="hero-logo" src="Assets/41a16fbe-dac6-4d23-b6ea-e9cb99b32397_removalai_preview.png" alt="Teton Construction Logo" />
+    <div class="hero-stack">
+      <div class="hero-brand">
+        <img class="hero-logo" src="Assets/41a16fbe-dac6-4d23-b6ea-e9cb99b32397_removalai_preview.png" alt="Teton Construction Logo" />
+      </div>
+      <nav class="main-links" aria-label="Primary links">
+        <a href="Projects/Projects.html" title="View our projects">Projects</a>
+        <a href="Contact/Contact.html" title="Get in touch">Contact</a>
+      </nav>
     </div>
-    <nav class="main-links">
-      <a href="Projects/Projects.html" title="View our projects">Projects</a>
-      <a href="Contact/Contact.html" title="Get in touch">Contact</a>
-    </nav>
   </div>
   <script>
     // Preloader logic
