--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
   <div class="content">
     <div class="hero-stack">
       <div class="hero-brand">
-        <img class="hero-logo" src="Assets/41a16fbe-dac6-4d23-b6ea-e9cb99b32397_removalai_preview.png" alt="Teton Construction Logo" />
+        <div class="hero-logo-crop">
+          <picture class="hero-logo-picture">
+            <source srcset="Assets/TetonConstruction_Assets-2.png" media="(max-width:760px)">
+            <img class="hero-logo" src="Assets/41a16fbe-dac6-4d23-b6ea-e9cb99b32397_removalai_preview.png" alt="Teton Construction Logo" />
+          </picture>
+        </div>
       </div>
       <nav class="main-links" aria-label="Primary links">
         <a href="Projects/Projects.html" title="View our projects">Projects</a>
